Update 's2qi5kaiz-python' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-bdcee7700f.x1ui.p3.openshiftapps.com/rhtap/rhtap-qe:1c7bf4b5ffe12bdfb4e9bb9c6c860017e08b0230@sha256:9fc12e5c3c4aa5be1c89299cfa812a8f82f1a4528e23df549b5d654cb021782c

--- a/components/s2qi5kaiz-python/overlays/development/deployment-patch.yaml
+++ b/components/s2qi5kaiz-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: s2qi5kaiz-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-bdcee7700f.x1ui.p3.openshiftapps.com/rhtap/rhtap-qe:1c7bf4b5ffe12bdfb4e9bb9c6c860017e08b0230@sha256:9fc12e5c3c4aa5be1c89299cfa812a8f82f1a4528e23df549b5d654cb021782c
+          name: container-image
